--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
       font-size: 1.1rem;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      display: none;
     }
     #enableNotificationsBtn:hover {
       background-color: #075e54;
@@ -348,9 +349,20 @@
 
       messages.appendChild(li);
       messages.scrollTop = messages.scrollHeight;
+
+      // Show notification if permission granted and user not focused and not sender
+      if (Notification.permission === 'granted' && !document.hasFocus() && !isSender) {
+        const notifTitle = `New message from ${data.sender}`;
+        const notifOptions = {
+          body: data.message || 'You received a new message',
+          icon: '/notification-icon.png', // optional, add your icon file in public folder
+          tag: 'chat-message'
+        };
+        new Notification(notifTitle, notifOptions);
+      }
     });
 
-    // --- Push Notifications ---
+    // --- Push Notifications Setup ---
 
     const publicVapidKey = 'BNwGaSbwVrshdsL2H8pFbyeg5UCgJdQKSeGLCiPjoDB-3LyKaBZVjlG8ASOuqUfb7btmdh0NS1CKG6lV2mrnGKY';
 
