--- a/index.html
+++ b/index.html
@@ -2,419 +2,207 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Chat Room with Notifications</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Chat App</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
 
     body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f4f4f4;
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f1f1f1;
-    }
-
-    nav {
-      background-color: #128c7e;
-      padding: 15px;
-      text-align: center;
-    }
-
-    nav a {
-      color: #fff;
-      margin: 0 20px;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 1.1rem;
+      padding: 0;
     }
 
     .container {
       max-width: 800px;
-      margin: 30px auto;
-      background: white;
-      border-radius: 10px;
+      margin: auto;
+      padding: 1rem;
+      background: #fff;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      padding: 20px;
     }
 
-    #joinForm {
-      display: block;
+    .chat-box {
+      height: 400px;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      padding: 1rem;
+      margin-bottom: 1rem;
     }
 
-    #chatWindow {
-      display: none;
-      flex-direction: column;
-      height: 500px;
+    .message {
+      margin-bottom: 1rem;
+    }
+
+    .message.me {
+      text-align: right;
+      color: blue;
+    }
+
+    .message.other {
+      text-align: left;
+      color: green;
+    }
+
+    .form {
+      display: flex;
+      gap: 0.5rem;
     }
 
     input[type="text"] {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+      flex: 1;
+      padding: 0.5rem;
       font-size: 1rem;
     }
 
-    #joinChatRoom {
-      padding: 12px;
-      width: 100%;
-      background-color: #128c7e;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 1.1rem;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    #joinChatRoom:hover {
-      background-color: #075e54;
-    }
-
-    #messages {
-      list-style-type: none;
-      padding: 10px;
-      margin: 0;
-      flex: 1;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      background-color: #fafafa;
-    }
-
-    #messages li {
-      max-width: 70%;
-      padding: 10px 15px;
-      border-radius: 20px;
-      word-wrap: break-word;
-      position: relative;
-      box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    }
-
-    .sender {
-      align-self: flex-end;
-      background-color: #dcf8c6;
-      text-align: right;
-      border-bottom-right-radius: 0;
-    }
-
-    .receiver {
-      align-self: flex-start;
-      background-color: #ececec;
-      text-align: left;
-      border-bottom-left-radius: 0;
-    }
-
-    form {
-      display: flex;
-      gap: 10px;
-      margin-top: 15px;
-      align-items: center;
-    }
-
-    #messageInput {
-      flex: 1;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+    button {
+      padding: 0.5rem 1rem;
       font-size: 1rem;
-    }
-
-    form button {
-      flex-shrink: 0;
-      padding: 12px 20px;
-      background-color: #128c7e;
-      color: white;
+      background: #007bff;
       border: none;
-      border-radius: 6px;
-      font-size: 1.1rem;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    form button:hover {
-      background-color: #075e54;
-    }
-
-    .attachment-label {
-      position: relative;
-      cursor: pointer;
-      font-size: 24px;
-      color: #128c7e;
-      padding: 8px;
-      user-select: none;
-    }
-
-    .attachment-label input {
-      display: none;
-    }
-
-    .badge {
-      position: absolute;
-      top: 0;
-      right: 0;
-      background: red;
       color: white;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    button:hover {
+      background: #0056b3;
+    }
+
+    #attachmentCount {
+      background-color: red;
+      color: white;
+      padding: 0 8px;
       border-radius: 50%;
-      font-size: 10px;
-      width: 16px;
-      height: 16px;
-      text-align: center;
-      line-height: 16px;
+      font-size: 12px;
       display: none;
-      pointer-events: none;
-    }
-
-    .chat-image {
-      max-width: 100px;
-      border-radius: 10px;
-      cursor: pointer;
-      margin-top: 5px;
-      display: block;
-    }
-
-    /* Overlay Preview */
-    .overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background-color: rgba(0,0,0,0.8);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
-      cursor: pointer;
-    }
-
-    .overlay img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 10px;
-      box-shadow: 0 0 20px black;
-    }
-
-    /* Notification Button */
-    #enableNotificationsBtn {
-      margin-top: 15px;
-      padding: 12px;
-      width: 100%;
-      background-color: #128c7e;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 1.1rem;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    #enableNotificationsBtn:hover {
-      background-color: #075e54;
+      vertical-align: top;
+      margin-left: 5px;
     }
   </style>
 </head>
 <body>
-
-  <nav>
-    <a href="index.html">Chat</a>
-    <a href="movies.html">Movies</a>
-    <a href="comment.html">Comments</a>
-  </nav>
-
   <div class="container">
-    <div id="joinForm">
-      <input type="text" id="username" placeholder="Enter your name" />
-      <input type="text" id="roomId" placeholder="Enter room ID" />
-      <button id="joinChatRoom" onclick="joinRoom()">Join Chat Room</button>
+    <h2>Chat Application</h2>
+
+    <div class="chat-box" id="chatBox"></div>
+
+    <div class="form">
+      <input type="text" id="messageInput" placeholder="Type a message..." />
+      <button id="sendBtn">Send</button>
+      <button id="attachmentBtn">📎</button>
+      <input type="file" id="fileInput" style="display: none" />
+      <span id="attachmentCount">1</span>
     </div>
 
-    <div id="chatWindow">
-      <ul id="messages"></ul>
-      <form id="messageForm">
-        <input id="messageInput" type="text" placeholder="Type your message..." autocomplete="off" />
-        <label class="attachment-label" title="Attach Image">
-          📎
-          <span class="badge" id="fileBadge">1</span>
-          <input type="file" id="attachmentInput" accept="image/*" />
-        </label>
-        <button type="submit">Send</button>
-      </form>
-    </div>
-
-    <button id="enableNotificationsBtn" title="Enable Push Notifications">Enable Notifications</button>
-  </div>
-
-  <div id="imageOverlay" class="overlay" onclick="this.style.display='none'">
-    <img id="overlayImg" src="" alt="Preview Image" />
+    <br/>
+    <button id="enableNotificationsBtn">Enable Notifications</button>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
 
-    const joinForm = document.getElementById('joinForm');
-    const chatWindow = document.getElementById('chatWindow');
-    const messages = document.getElementById('messages');
-    const messageForm = document.getElementById('messageForm');
+    const chatBox = document.getElementById('chatBox');
     const messageInput = document.getElementById('messageInput');
-    const attachmentInput = document.getElementById('attachmentInput');
-    const fileBadge = document.getElementById('fileBadge');
+    const sendBtn = document.getElementById('sendBtn');
+    const attachmentBtn = document.getElementById('attachmentBtn');
+    const fileInput = document.getElementById('fileInput');
+    const attachmentCount = document.getElementById('attachmentCount');
     const enableNotificationsBtn = document.getElementById('enableNotificationsBtn');
 
-    let currentUsername = '';
-    let currentRoomId = '';
     let selectedFile = null;
+    let roomId = "room1";
+    let username = "User" + Math.floor(Math.random() * 1000);
 
-    fileBadge.style.display = 'none';
+    socket.emit('chat:joinRoom', { roomId, username });
 
-    function joinRoom() {
-      const username = document.getElementById('username').value.trim();
-      const roomId = document.getElementById('roomId').value.trim();
-      if (!username || !roomId) {
-        alert('Please enter both username and room ID');
-        return;
-      }
+    sendBtn.addEventListener('click', () => {
+      const message = messageInput.value.trim();
+      if (!message && !selectedFile) return;
 
-      currentUsername = username;
-      currentRoomId = roomId;
-
-      socket.emit('chat:joinRoom', { username, roomId });
-      joinForm.style.display = 'none';
-      chatWindow.style.display = 'flex';
-      enableNotificationsBtn.style.display = 'block';
-    }
-
-    attachmentInput.addEventListener('change', (e) => {
-      selectedFile = e.target.files[0];
-      fileBadge.style.display = selectedFile ? 'inline-block' : 'none';
-    });
-
-    messageForm.addEventListener('submit', (e) => {
-      e.preventDefault();
-
-      const msg = messageInput.value.trim();
+      const data = {
+        username,
+        message,
+        roomId,
+        timestamp: new Date().toISOString(),
+        file: null,
+      };
 
       if (selectedFile) {
         const reader = new FileReader();
-        reader.onload = function(evt) {
-          socket.emit('chat:message', {
-            roomId: currentRoomId,
-            sender: currentUsername,
-            file: evt.target.result,
-            fileName: selectedFile.name,
-            fileType: selectedFile.type
-          });
+        const file = selectedFile; // capture file in current scope
+        reader.onload = function(e) {
+          data.file = {
+            name: file.name,
+            type: file.type,
+            data: e.target.result,
+          };
+          socket.emit('chat:message', data);
+          selectedFile = null;
+          attachmentCount.style.display = 'none';
         };
-        reader.readAsDataURL(selectedFile);
-        selectedFile = null;
-        fileBadge.style.display = 'none';
-      }
-
-      if (msg) {
-        socket.emit('chat:message', {
-          roomId: currentRoomId,
-          message: msg,
-          sender: currentUsername
-        });
+        reader.readAsDataURL(file);
+      } else {
+        socket.emit('chat:message', data);
       }
 
       messageInput.value = '';
-      attachmentInput.value = '';
     });
 
     socket.on('chat:message', (data) => {
-      const li = document.createElement('li');
-      const isSender = data.sender === currentUsername;
-      li.className = isSender ? 'sender' : 'receiver';
+      const div = document.createElement('div');
+      div.classList.add('message');
+      div.classList.add(data.username === username ? 'me' : 'other');
 
-      if (data.file && data.fileType && data.fileType.startsWith('image/')) {
-        const img = document.createElement('img');
-        img.src = data.file;
-        img.className = 'chat-image';
-        img.onclick = () => {
-          document.getElementById('overlayImg').src = data.file;
-          document.getElementById('imageOverlay').style.display = 'flex';
-        };
-        li.appendChild(img);
+      let html = `<strong>${data.username}:</strong> ${data.message || ''}`;
+
+      if (data.file) {
+        if (data.file.type.startsWith('image/')) {
+          html += `<br><img src="${data.file.data}" alt="${data.file.name}" width="150"/>`;
+        } else {
+          html += `<br><a href="${data.file.data}" download="${data.file.name}">${data.file.name}</a>`;
+        }
       }
 
-      if (data.message) {
-        const text = document.createElement('div');
-        text.textContent = `${isSender ? 'You' : data.sender}: ${data.message}`;
-        li.appendChild(text);
-      }
+      div.innerHTML = html;
+      chatBox.appendChild(div);
+      chatBox.scrollTop = chatBox.scrollHeight;
 
-      messages.appendChild(li);
-      messages.scrollTop = messages.scrollHeight;
-
-      // Show notification for new messages when window not focused
-      if (Notification.permission === 'granted' && !document.hasFocus() && !isSender) {
-        const notifTitle = `New message from ${data.sender}`;
-        const notifOptions = {
-          body: data.message || 'You received a new message',
-          icon: '/notification-icon.png', // optional icon path
-          tag: `chat-message-${Date.now()}`
-        };
-        new Notification(notifTitle, notifOptions);
+      if (Notification.permission === 'granted' && data.username !== username) {
+        new Notification(`New message from ${data.username}`, {
+          body: data.message || data.file?.name || 'Sent a file',
+        });
       }
     });
 
-    // --- Push Notifications setup ---
+    attachmentBtn.addEventListener('click', () => {
+      fileInput.click();
+    });
 
-    const publicVapidKey = 'BNwGaSbwVrshdsL2H8pFbyeg5UCgJdQKSeGLCiPjoDB-3LyKaBZVjlG8ASOuqUfb7btmdh0NS1CKG6lV2mrnGKY';
-
-    function urlBase64ToUint8Array(base64String) {
-      const padding = '='.repeat((4 - base64String.length % 4) % 4);
-      const base64 = (base64String + padding).replace(/\-/g, '+').replace(/_/g, '/');
-      const rawData = window.atob(base64);
-      const outputArray = new Uint8Array(rawData.length);
-      for (let i = 0; i < rawData.length; ++i) {
-        outputArray[i] = rawData.charCodeAt(i);
-      }
-      return outputArray;
-    }
-
-    async function registerServiceWorkerAndSubscribe() {
-      try {
-        const registration = await navigator.serviceWorker.register('/sw.js');
-        console.log('Service Worker registered');
-
-        const subscription = await registration.pushManager.subscribe({
-          userVisibleOnly: true,
-          applicationServerKey: urlBase64ToUint8Array(publicVapidKey)
-        });
-
-        console.log('Push subscribed:', subscription);
-
-        // TODO: Send subscription to server to save and use for push messages
-        // await fetch('/subscribe', {
-        //   method: 'POST',
-        //   body: JSON.stringify(subscription),
-        //   headers: { 'Content-Type': 'application/json' },
-        // });
-
-      } catch (error) {
-        console.error('Service Worker or Push subscription failed:', error);
-      }
-    }
+    fileInput.addEventListener('change', () => {
+      const file = fileInput.files[0];
+      if (!file) return;
+      selectedFile = file;
+      attachmentCount.style.display = 'inline-block';
+    });
 
     enableNotificationsBtn.addEventListener('click', async () => {
-      if (!('Notification' in window) || !('serviceWorker' in navigator)) {
-        alert('Push notifications are not supported by your browser.');
-        return;
-      }
-
       const permission = await Notification.requestPermission();
-      if (permission === 'granted') {
-        await registerServiceWorkerAndSubscribe();
-        alert('Notifications enabled!');
-        enableNotificationsBtn.style.display = 'none';
-      } else {
+      if (permission !== 'granted') {
         alert('Notification permission is required to receive alerts.');
       }
     });
-  </script>
 
+    // Optional: register service worker for push notifications (not required for local testing)
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js').catch(err => {
+        console.warn('Service worker registration failed', err);
+      });
+    }
+  </script>
 </body>
 </html>
