--- a/index.html
+++ b/index.html
@@ -2,23 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Chat Room with Notifications</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat Room</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     * { box-sizing: border-box; }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f1f1f1;
     }
-
     nav {
       background-color: #128c7e;
       padding: 15px;
       text-align: center;
     }
-
     nav a {
       color: #fff;
       margin: 0 20px;
@@ -26,7 +23,6 @@
       font-weight: bold;
       font-size: 1.1rem;
     }
-
     .container {
       max-width: 800px;
       margin: 30px auto;
@@ -35,17 +31,14 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       padding: 20px;
     }
-
     #joinForm {
       display: block;
     }
-
     #chatWindow {
       display: none;
       flex-direction: column;
       height: 500px;
     }
-
     input[type="text"] {
       width: 100%;
       padding: 12px;
@@ -54,7 +47,6 @@
       border-radius: 6px;
       font-size: 1rem;
     }
-
     #joinChatRoom {
       padding: 12px;
       width: 100%;
@@ -66,11 +58,9 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
-
     #joinChatRoom:hover {
       background-color: #075e54;
     }
-
     #messages {
       list-style-type: none;
       padding: 10px;
@@ -84,7 +74,6 @@
       border-radius: 6px;
       background-color: #fafafa;
     }
-
     #messages li {
       max-width: 70%;
       padding: 10px 15px;
@@ -93,28 +82,24 @@
       position: relative;
       box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     }
-
     .sender {
       align-self: flex-end;
       background-color: #dcf8c6;
       text-align: right;
       border-bottom-right-radius: 0;
     }
-
     .receiver {
       align-self: flex-start;
       background-color: #ececec;
       text-align: left;
       border-bottom-left-radius: 0;
     }
-
     form {
       display: flex;
       gap: 10px;
       margin-top: 15px;
       align-items: center;
     }
-
     #messageInput {
       flex: 1;
       padding: 12px;
@@ -122,7 +107,6 @@
       border-radius: 6px;
       font-size: 1rem;
     }
-
     form button {
       flex-shrink: 0;
       padding: 12px 20px;
@@ -134,139 +118,43 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
-
     form button:hover {
-      background-color: #075e54;
-    }
-
-    .attachment-label {
-      position: relative;
-      cursor: pointer;
-      font-size: 24px;
-      color: #128c7e;
-      padding: 8px;
-      user-select: none;
-    }
-
-    .attachment-label input {
-      display: none;
-    }
-
-    .badge {
-      position: absolute;
-      top: 0;
-      right: 0;
-      background: red;
-      color: white;
-      border-radius: 50%;
-      font-size: 10px;
-      width: 16px;
-      height: 16px;
-      text-align: center;
-      line-height: 16px;
-      display: none;
-      pointer-events: none;
-    }
-
-    .chat-image {
-      max-width: 100px;
-      border-radius: 10px;
-      cursor: pointer;
-      margin-top: 5px;
-      display: block;
-    }
-
-    /* Overlay Preview */
-    .overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background-color: rgba(0,0,0,0.8);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
-      cursor: pointer;
-    }
-
-    .overlay img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 10px;
-      box-shadow: 0 0 20px black;
-    }
-
-    /* Notification Button */
-    #enableNotificationsBtn {
-      margin-top: 15px;
-      padding: 12px;
-      width: 100%;
-      background-color: #128c7e;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 1.1rem;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    #enableNotificationsBtn:hover {
       background-color: #075e54;
     }
   </style>
 </head>
 <body>
-
   <nav>
     <a href="index.html">Chat</a>
     <a href="movies.html">Movies</a>
     <a href="comment.html">Comments</a>
   </nav>
-
   <div class="container">
     <div id="joinForm">
       <input type="text" id="username" placeholder="Enter your name" />
       <input type="text" id="roomId" placeholder="Enter room ID" />
       <button id="joinChatRoom" onclick="joinRoom()">Join Chat Room</button>
     </div>
-
     <div id="chatWindow">
       <ul id="messages"></ul>
       <form id="messageForm">
         <input id="messageInput" type="text" placeholder="Type your message..." autocomplete="off" />
-        <label class="attachment-label" title="Attach Image">
-          📎
-          <span class="badge" id="fileBadge">1</span>
-          <input type="file" id="attachmentInput" accept="image/*" />
-        </label>
         <button type="submit">Send</button>
       </form>
     </div>
-
-    <button id="enableNotificationsBtn" title="Enable Push Notifications">Enable Notifications</button>
-  </div>
-
-  <div id="imageOverlay" class="overlay" onclick="this.style.display='none'">
-    <img id="overlayImg" src="" alt="Preview Image" />
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-
     const joinForm = document.getElementById('joinForm');
     const chatWindow = document.getElementById('chatWindow');
     const messages = document.getElementById('messages');
     const messageForm = document.getElementById('messageForm');
     const messageInput = document.getElementById('messageInput');
-    const attachmentInput = document.getElementById('attachmentInput');
-    const fileBadge = document.getElementById('fileBadge');
-    const enableNotificationsBtn = document.getElementById('enableNotificationsBtn');
 
     let currentUsername = '';
     let currentRoomId = '';
-    let selectedFile = null;
-
-    fileBadge.style.display = 'none';
 
     function joinRoom() {
       const username = document.getElementById('username').value.trim();
@@ -275,146 +163,30 @@
         alert('Please enter both username and room ID');
         return;
       }
-
       currentUsername = username;
       currentRoomId = roomId;
-
       socket.emit('chat:joinRoom', { username, roomId });
       joinForm.style.display = 'none';
       chatWindow.style.display = 'flex';
-      enableNotificationsBtn.style.display = 'block';
     }
 
-    attachmentInput.addEventListener('change', (e) => {
-      selectedFile = e.target.files[0];
-      fileBadge.style.display = selectedFile ? 'inline-block' : 'none';
-    });
-
-    messageForm.addEventListener('submit', (e) => {
+    messageForm.addEventListener('submit', e => {
       e.preventDefault();
-
       const msg = messageInput.value.trim();
-
-      if (selectedFile) {
-        const reader = new FileReader();
-        reader.onload = function(evt) {
-          socket.emit('chat:message', {
-            roomId: currentRoomId,
-            sender: currentUsername,
-            file: evt.target.result,
-            fileName: selectedFile.name,
-            fileType: selectedFile.type
-          });
-        };
-        reader.readAsDataURL(selectedFile);
-        selectedFile = null;
-        fileBadge.style.display = 'none';
-      }
-
-      if (msg) {
-        socket.emit('chat:message', {
-          roomId: currentRoomId,
-          message: msg,
-          sender: currentUsername
-        });
-      }
-
+      if (!msg) return;
+      socket.emit('chat:message', { roomId: currentRoomId, message: msg, sender: currentUsername });
       messageInput.value = '';
-      attachmentInput.value = '';
     });
 
-    socket.on('chat:message', (data) => {
+    socket.on('chat:message', data => {
+      if (!data || !data.message || !data.sender) return;
       const li = document.createElement('li');
       const isSender = data.sender === currentUsername;
       li.className = isSender ? 'sender' : 'receiver';
-
-      if (data.file && data.fileType && data.fileType.startsWith('image/')) {
-        const img = document.createElement('img');
-        img.src = data.file;
-        img.className = 'chat-image';
-        img.onclick = () => {
-          document.getElementById('overlayImg').src = data.file;
-          document.getElementById('imageOverlay').style.display = 'flex';
-        };
-        li.appendChild(img);
-      }
-
-      if (data.message) {
-        const text = document.createElement('div');
-        text.textContent = `${isSender ? 'You' : data.sender}: ${data.message}`;
-        li.appendChild(text);
-      }
-
+      li.textContent = `${data.sender}: ${data.message}`;
       messages.appendChild(li);
       messages.scrollTop = messages.scrollHeight;
-
-      // Show notification for new messages when window not focused
-      if (Notification.permission === 'granted' && !document.hasFocus() && !isSender) {
-        const notifTitle = `New message from ${data.sender}`;
-        const notifOptions = {
-          body: data.message || 'You received a new message',
-          icon: '/notification-icon.png', // optional icon path
-          tag: `chat-message-${Date.now()}`
-        };
-        new Notification(notifTitle, notifOptions);
-      }
-    });
-
-    // --- Push Notifications setup ---
-
-    const publicVapidKey = 'BNwGaSbwVrshdsL2H8pFbyeg5UCgJdQKSeGLCiPjoDB-3LyKaBZVjlG8ASOuqUfb7btmdh0NS1CKG6lV2mrnGKY';
-
-    function urlBase64ToUint8Array(base64String) {
-      const padding = '='.repeat((4 - base64String.length % 4) % 4);
-      const base64 = (base64String + padding).replace(/\-/g, '+').replace(/_/g, '/');
-      const rawData = window.atob(base64);
-      const outputArray = new Uint8Array(rawData.length);
-      for (let i = 0; i < rawData.length; ++i) {
-        outputArray[i] = rawData.charCodeAt(i);
-      }
-      return outputArray;
-    }
-
-    async function registerServiceWorkerAndSubscribe() {
-      try {
-        const registration = await navigator.serviceWorker.register('/sw.js');
-        console.log('Service Worker registered');
-
-        const subscription = await registration.pushManager.subscribe({
-          userVisibleOnly: true,
-          applicationServerKey: urlBase64ToUint8Array(publicVapidKey)
-        });
-
-        console.log('Push subscribed:', subscription);
-
-        // TODO: Send subscription to server to save and use for push messages
-        // await fetch('/subscribe', {
-        //   method: 'POST',
-        //   body: JSON.stringify(subscription),
-        //   headers: { 'Content-Type': 'application/json' },
-        // });
-
-      } catch (error) {
-        console.error('Service Worker or Push subscription failed:', error);
-      }
-    }
-
-    enableNotificationsBtn.addEventListener('click', async () => {
-      if (!('Notification' in window) || !('serviceWorker' in navigator)) {
-        alert('Push notifications are not supported by your browser.');
-        return;
-      }
-
-      const permission = await Notification.requestPermission();
-      if (permission === 'granted') {
-        await registerServiceWorkerAndSubscribe();
-        alert('Notifications enabled!');
-        enableNotificationsBtn.style.display = 'none';
-      } else {
-        alert('Notification permission is required to receive alerts.');
-      }
     });
   </script>
-
 </body>
 </html>
