--- a/canvas.html
+++ b/canvas.html
@@ -1,78 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Draw on Fullscreen Canvas</title>
+  <meta charset="UTF-8" />
+  <title>Multiplayer Drawing</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       overflow: hidden;
       height: 100%;
-      width: 100%;
     }
 
     canvas {
       display: block;
-      touch-action: none; /* Prevent scrolling on touch devices */
+      touch-action: none;
     }
   </style>
 </head>
 <body>
-  <canvas id="myCanvas"></canvas>
+  <canvas id="canvas"></canvas>
 
+  <script src="/socket.io/socket.io.js"></script>
   <script>
-    const canvas = document.getElementById('myCanvas');
+    const socket = io();
+
+    const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
 
-    // Resize canvas to fit screen
+    // Resize canvas
     function resizeCanvas() {
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
     }
-
     resizeCanvas();
     window.addEventListener('resize', resizeCanvas);
 
-    // Drawing state
     let drawing = false;
+
+    function getPos(e) {
+      return {
+        x: e.clientX || (e.touches && e.touches[0].clientX),
+        y: e.clientY || (e.touches && e.touches[0].clientY)
+      };
+    }
 
     function startDrawing(e) {
       drawing = true;
-      draw(e); // Start with a dot
+      const { x, y } = getPos(e);
+      drawLine(x, y);
+      socket.emit('draw', { x, y });
     }
 
-    function endDrawing() {
+    function stopDrawing() {
       drawing = false;
-      ctx.beginPath(); // Reset path
+      ctx.beginPath();
+      socket.emit('end');
     }
 
-    function draw(e) {
+    function drawMove(e) {
       if (!drawing) return;
+      const { x, y } = getPos(e);
+      drawLine(x, y);
+      socket.emit('draw', { x, y });
+    }
 
-      // Get mouse/touch position
-      const x = e.clientX || e.touches[0].clientX;
-      const y = e.clientY || e.touches[0].clientY;
-
+    function drawLine(x, y, remote = false) {
       ctx.lineWidth = 3;
       ctx.lineCap = 'round';
-      ctx.strokeStyle = '#00f';
-
+      ctx.strokeStyle = remote ? '#f00' : '#00f'; // Red for others
       ctx.lineTo(x, y);
       ctx.stroke();
       ctx.beginPath();
       ctx.moveTo(x, y);
     }
 
-    // Mouse events
+    // Local drawing
     canvas.addEventListener('mousedown', startDrawing);
-    canvas.addEventListener('mouseup', endDrawing);
-    canvas.addEventListener('mousemove', draw);
-
-    // Touch events
+    canvas.addEventListener('mouseup', stopDrawing);
+    canvas.addEventListener('mousemove', drawMove);
     canvas.addEventListener('touchstart', startDrawing);
-    canvas.addEventListener('touchend', endDrawing);
-    canvas.addEventListener('touchmove', draw);
+    canvas.addEventListener('touchend', stopDrawing);
+    canvas.addEventListener('touchmove', drawMove);
+
+    // Handle drawing from other users
+    socket.on('draw', ({ x, y }) => {
+      drawLine(x, y, true);
+    });
+
+    socket.on('end', () => {
+      ctx.beginPath();
+    });
   </script>
 </body>
 </html>
