--- a/canvas.html
+++ b/canvas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Multiplayer Drawing with Sidebar Toolbar</title>
+  <title>Multiplayer Drawing with Independent Brushes</title>
   <style>
     html, body {
       margin: 0;
@@ -35,7 +35,6 @@
       z-index: 2;
     }
 
-    /* Eraser group: eraser btn + slider horizontally */
     #eraserToolGroup {
       display: flex;
       align-items: center;
@@ -51,7 +50,7 @@
       background-color: #555;
       border: none;
       color: white;
-      border-radius: 6px 0 0 6px; /* rounded left corners */
+      border-radius: 6px 0 0 6px;
       cursor: pointer;
       flex-shrink: 0;
     }
@@ -62,7 +61,7 @@
     #eraserSizeSlider {
       width: 80px;
       margin-left: 4px;
-      border-radius: 0 6px 6px 0; /* rounded right corners */
+      border-radius: 0 6px 6px 0;
       display: none;
       -webkit-appearance: none;
       background: #555;
@@ -89,7 +88,6 @@
       border: none;
     }
 
-    /* Other buttons */
     .tool-btn {
       background-color: #555;
       border: none;
@@ -108,7 +106,6 @@
     }
 
     #penBtn {
-      /* separate from eraser group */
       border-radius: 6px;
     }
 
@@ -129,7 +126,7 @@
       background-color: rgba(255, 255, 255, 0.5);
       z-index: 1;
       display: none;
-      mix-blend-mode: difference; /* makes preview visible on any background */
+      mix-blend-mode: difference;
     }
   </style>
 </head>
@@ -169,6 +166,9 @@
     const eraserColor = '#ffffff'; // match canvas background
     let eraserSize = 10;
 
+    // Track last positions for each sender to keep brushes independent
+    const lastPositions = {};
+
     // Resize canvas
     function resizeCanvas() {
       canvas.width = window.innerWidth - 60;
@@ -185,20 +185,34 @@
       };
     }
 
-    function drawLine(x, y, remote = false, remoteColor = null, lineWidth = 4) {
-      ctx.lineWidth = lineWidth;
+    // Draw line for a specific user (senderId)
+    function drawLineForUser(senderId, x, y, color, width) {
+      if (!lastPositions[senderId]) {
+        // First point for this sender
+        lastPositions[senderId] = { x, y };
+        ctx.beginPath();
+        ctx.moveTo(x, y);
+        return;
+      }
+      ctx.lineWidth = width;
       ctx.lineCap = 'round';
-      ctx.strokeStyle = remote ? (remoteColor || '#000') : (tool === 'eraser' ? eraserColor : color);
+      ctx.strokeStyle = color;
+      ctx.beginPath();
+      ctx.moveTo(lastPositions[senderId].x, lastPositions[senderId].y);
       ctx.lineTo(x, y);
       ctx.stroke();
-      ctx.beginPath();
-      ctx.moveTo(x, y);
+      lastPositions[senderId] = { x, y };
     }
 
+    function endUserDraw(senderId) {
+      delete lastPositions[senderId];
+    }
+
+    // Local user drawing handlers
     function startDrawing(e) {
       isDrawing = true;
       const { x, y } = getPos(e);
-      drawLine(x, y, false, null, tool === 'eraser' ? eraserSize : 4);
+      drawLineForUser('local', x, y, tool === 'eraser' ? eraserColor : color, tool === 'eraser' ? eraserSize : 4);
       socket.emit('draw', {
         x,
         y,
@@ -211,12 +225,13 @@
       isDrawing = false;
       ctx.beginPath();
       socket.emit('end');
+      endUserDraw('local');
     }
 
     function drawMove(e) {
       if (!isDrawing) return;
       const { x, y } = getPos(e);
-      drawLine(x, y, false, null, tool === 'eraser' ? eraserSize : 4);
+      drawLineForUser('local', x, y, tool === 'eraser' ? eraserColor : color, tool === 'eraser' ? eraserSize : 4);
       socket.emit('draw', {
         x,
         y,
@@ -232,15 +247,19 @@
     canvas.addEventListener('touchend', stopDrawing);
     canvas.addEventListener('touchmove', drawMove);
 
-    socket.on('draw', ({ x, y, color, width }) => {
-      drawLine(x, y, true, color, width);
+    // Receiving draw events from others
+    socket.on('draw', ({ senderId, x, y, color, width }) => {
+      // Ignore our own local events (optional)
+      if (senderId === socket.id) return;
+      drawLineForUser(senderId, x, y, color, width);
     });
 
-    socket.on('end', () => {
-      ctx.beginPath();
+    socket.on('end', ({ senderId }) => {
+      if (!senderId) return;
+      endUserDraw(senderId);
     });
 
-    // Toolbar buttons and inputs
+    // Toolbar controls
     const penBtn = document.getElementById('penBtn');
     const eraserBtn = document.getElementById('eraserBtn');
     const eraserSizeSlider = document.getElementById('eraserSizeSlider');
@@ -292,3 +311,4 @@
   </script>
 </body>
 </html>
+    
